--- a/basic_AWX_playbook.yml
+++ b/basic_AWX_playbook.yml
@@ -1,11 +1,7 @@
 ---
 - hosts: all
   tasks:
-    - name: Print message
-      debug:
-        msg: Hello Ansible AWX
-        
-    - name: Creates directory
+    - name: Creates_directory
       file:
         path: /tmp/test
         state: directory
